# fast_api_learn

./: .gitignore  Dockerfile  README.md  application.yaml  compose.yaml  database.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  schemas.py
fast_zero/routers/: clientes.py  users.py
front_nicegui/: main.py  menu.py  table.py  theme.py
migrations/versions/: 767cb7eed6ef_create_cliente_table.py  a450c1664ada_create_users_table.py  aba73f0c775f_create_users_table.py  b73b3fee8436_create_user_and_cliente_table.py
next_zero/: package-lock.json  package.json
next_zero/src/app/: page.tsx
next_zero/src/app/cliente/: [id].tsx  page.tsx
next_zero/src/app/services/: clienteService.ts
next_zero/src/app/types/: cliente.ts
next_zero/src/app/ui/cliente/: ClienteForm.tsx  ClienteList.tsx
tests/: conftest.py  test_app.py  test_clientes.py  test_db.py  test_users.py
